tests/test_data/CodeStructureSnippets/bad/sem_err_4.5.ifj21
require "ifj21"
function main()
    local vysl : number = "papa"
end
main()
